syntax = "proto3";
package user.v1;

import "google/protobuf/struct.proto";
import "tagger/tagger.proto";
import "time/v1/time.proto";
import "user/v1/user_auth.proto";
import "user/v1/user_tag.proto";

option go_package = "github.com/core-pb/user/user/v1;user";

message User {
    fixed64                id       = 1 [(tagger.tags) = "bun:\",pk,autoincrement\""];
    string                 username = 2;
    bool                   disable  = 3;
    google.protobuf.Struct data     = 4 [(tagger.tags) = "bun:\"type:jsonb\""];
    google.protobuf.Struct info     = 5 [(tagger.tags) = "bun:\"type:jsonb\""];

    time.v1.Time created_at          = 14 [(tagger.tags) = "bun:\"type:timestamptz\""];
    time.v1.Time updated_at          = 15 [(tagger.tags) = "bun:\"type:timestamptz\""];
    optional time.v1.Time deleted_at = 16 [(tagger.tags) = "bun:\"type:timestamptz,soft_delete,nullzero\""];
}

message UserDetail {
    User              user      = 1;
    repeated UserAuth user_auth = 2;
    repeated UserTag  user_tag  = 3;
}
